test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 10 Feb 2026 09:30:32 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="2Si6dtkSns5wkLli0cHd/O4pR588Pc3Y", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}